--- a/Contato/contato.html
+++ b/Contato/contato.html
@@ -28,12 +28,18 @@
                     <label for="nome" class="labelinput"> Telefone </label>
                 </div>
                 <br><br>
+                <p> Você é ? </p>
+                <input type="radio" id="pessoafisica" name="assunto" value="pessoafisica" required>
+                <label for="pessoa física"> Pessoa Física </label>
+                <br>
+                <input type="radio" id="pessoajurídica" name="assunto" value="pessoajurídica" required>
+                <label for="Pessoa Jurídica"> Pessoa Jurídica </label>
                 <p> Assunto </p>
                 <input type="radio" id="sitedinamico" name="assunto" value="sitedinamico" required>
-                <label for="feminino"> Site Dinamico </label>
+                <label for="site dinamico"> Site Dinamico </label>
                 <br>
                 <input type="radio" id="siteestatico" name="assunto" value="siteestatico" required>
-                <label for="masculino"> Site Estático </label>
+                <label for="site estático"> Site Estático </label>
                 <br>
                 <input type="radio" id="outro" name="assunto" value="outro" outro required>
                 <label for="outro"> Outro </label>
@@ -42,13 +48,13 @@
                 <input type="date" name="datacontato" id="datacontato" required>
                 <br><br>
                 <div class="inputBox">
-                    <input type="text" name="cidade" id="cidade" class="inputuser" required>
-                    <label for="cidade" class="labelinput"> Cidade </label>
+                    <input type="time" name="melhorhoracontato" id="melhorhoracontato" class="inputuser" required>
+                    <label for="melhorhoracontato" class="labelinput"> Melhor Horarío para Contato </label>
                 </div>
                 <br><br>
                 <div class="inputBox">
-                    <input type="text" name="estado" id="estado" class="inputuser" required>
-                    <label for="estado" class="labelinput"> Estado </label>
+                    <input type="text" name="endereço" id="endereço" class="inputuser" required>
+                    <label for="endereço" class="labelinput"> Endereço </label>
                 </div>
                 <br><br>
                 <div class="inputBox">
