--- a/Curriculo/curriculo.html
+++ b/Curriculo/curriculo.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<embed name="Curriculo"  src="Currículo.pdf"
-    type="application/pdf">
+    <embed name="Curriculo" src="Currículo.pdf" type="application/pdf">
 </body>
+
 </html>
