--- a/Serviços/serviços.html
+++ b/Serviços/serviços.html
@@ -47,7 +47,9 @@
                     construir confiança. </h3>
                 </p>
 
-                <a href="../Contato/contato.html"> <p> Entre em Contato Agora mesmo </p> </a>
+                <a href="../Contato/contato.html">
+                    <p> Entre em Contato Agora mesmo </p>
+                </a>
             </section>
         </div>
     </div>
