--- a/Contato/contato.html
+++ b/Contato/contato.html
@@ -70,7 +70,7 @@
 </body>
 
 <footer>
-    <a href="../HomePage/HomePage.html"> <h3> Volte à Pagina Principal </h3> </a> </a>
+    <a href="../HomePage/HomePage.html"> <h3> Volte à Pagina Principal </h3> </a>
 </footer>
 
 </html>
